<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Holkan Tracker</string>
    <string name="action_settings">Herramientas</string>
    <string name="alert">Alerta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_sms_has_been_sent">Enviando mensajes de alerta...</string>
    <string name="alert_sms_body" formatted="false" >Alerta de %s en https://maps.google.com.mx/maps?q=%s,%s %s</string>
    <string name="sms_has_not_been_send">El mensaje de alerta no ha sido enviado</string>
    <string name="tracking_service">Servicio de monitoreo</string>
    <string name="title_checkbox_preference">Servicio de monitoreo encendido</string>
    <string name="summary_checkbox_preference">Si inicia el servicio de monitoreo se enviará su posición periódicamente a la central Holkan</string>
    <string name="user_information">Información de Usuario</string>
    <string name="title_user_name">Nombre</string>
    <string name="summary_edittext_username">Nombre de usuario</string>
    <string name="dialog_title_user_name">Cambiar Nombre de Usuario</string>
    <string name="tools">Herramientas</string>
    <string name="monitoring">Monitoreo en tiempo real</string>
    <string name="activate_tracking">Activar Servicio Holkan</string>
    <string name="contact_for_alerting">Contactos para alertas SMS</string>
    <string name="name">Mi nombre es:</string>
    <string name="phone1">Teléfono 1</string>
    <string name="phone3">Teléfono 3</string>
    <string name="phone2">Teléfono 2</string>
    <string name="location_service_connection_failed">Conexión con servicio de localización fallida </string>
    <string name="gps_network_not_enabled">Los servicios de localización no estan disponibles</string>
    <string name="open_location_settings">Configurar</string>
    <string name="Cancel">Cancelar</string>
    <string name="servicios_localizacion_inactivo">Servicios de localización inactivos. Haga click para activarlos</string>
    <string name="should_configure_al_least_one_phone">Debe configurar al menos un número de teléfono</string>
    <string name="sent_packets">Paquetes enviados</string>
    <string name="received_packets">Paquetes recibidos</string>
    <string name="total_packets">Paquetes totales</string>
    <string name="zero">0</string>
    <string name="zero_bytes">0 Bytes</string>
    <string name="reset_data">Limpiar datos</string>

</resources>
